--- a/requirements.txt
+++ b/requirements.txt
@@ -1,236 +1,112 @@
-absl-py==0.12.0
+aiohttp==3.8.1
+aiohttp-retry==2.4.6
+aiosignal==1.2.0
 alembic==1.4.1
 appdirs==1.4.4
-appnope==0.1.2
-argon2-cffi==20.1.0
-astroid==2.6.6
-astunparse==1.6.3
-async-generator==1.10
-asyncssh==2.7.0
+async-timeout==4.0.1
 atpublic==2.3
-attrs==20.3.0
-backcall==0.2.0
-bcrypt==3.2.0
-bleach==3.3.0
-blis==0.7.4
-boto3==1.19.12
-botocore==1.22.12
-branca==0.4.2
-cachetools==4.2.2
-catalogue==2.0.6
-certifi==2020.12.5
-cffi==1.14.5
-chainer==7.7.0
-chardet==3.0.4
-click==7.1.2
+attrs==21.2.0
+boto3==1.20.7
+botocore==1.23.7
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+click==8.0.3
 cloudpickle==2.0.0
 colorama==0.4.4
 commonmark==0.9.1
 configobj==5.0.6
-cryptography==3.4.7
-cycler==0.10.0
-cymem==2.0.5
-Cython==0.29.24
-dartsclone==0.9.0
-databricks-cli==0.15.0
-decorator==4.4.2
-defusedxml==0.7.1
+cycler==0.11.0
+databricks-cli==0.16.2
 dictdiffer==0.9.0
 diskcache==5.2.1
-distro==1.5.0
-docker==5.0.0
-docker-compose==1.29.1
-dockerpty==0.4.1
-docopt==0.6.2
-dpath==2.0.1
-dulwich==0.20.24
-dvc==2.6.4
+distro==1.6.0
+docker==5.0.3
+dpath==2.0.5
+dulwich==0.20.26
+dvc==2.8.3
 entrypoints==0.3
-filelock==3.0.12
-Flask==2.0.1
-flatbuffers==1.12
-flatten-dict==0.4.1
-flufl.lock==3.2
-folium==0.12.1
-fsspec==2021.8.1
+Flask==2.0.2
+flatten-dict==0.4.2
+flufl.lock==6.0
+fonttools==4.28.1
+frozenlist==1.2.0
+fsspec==2021.11.0
 ftfy==6.0.3
 funcy==1.16
 future==0.18.2
-gast==0.4.0
-ginza @ https://github.com/megagonlabs/ginza/releases/download/latest/ginza-latest.tar.gz
-gitdb==4.0.7
-GitPython==3.1.18
-google-auth==1.30.0
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-googletrans==3.0.0
+gitdb==4.0.9
+GitPython==3.1.24
 grandalf==0.6
-greenlet==1.1.1
-grpcio==1.34.1
+greenlet==1.1.2
 gunicorn==20.1.0
-h11==0.9.0
-h2==3.2.0
-h5py==3.1.0
-hpack==3.0.0
-hstspreload==2020.12.22
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-idna==2.10
-importlib-metadata==4.8.1
-ipykernel==5.5.3
-ipython==7.22.0
-ipython-genutils==0.2.0
-isort==5.9.3
+idna==3.3
+importlib-metadata==4.8.2
 itsdangerous==2.0.1
-ja-ginza==5.0.0
-jedi==0.18.0
-jellyfish==0.8.8
-Jinja2==3.0.1
+Jinja2==3.0.3
 jmespath==0.10.0
-joblib==1.0.1
-jsonpath-ng==1.5.3
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-lazy-object-proxy==1.6.0
-lightgbm==3.2.1
-mailchecker==4.0.11
+joblib==1.1.0
+kiwisolver==1.3.2
+mailchecker==4.0.16
 Mako==1.1.5
-Markdown==3.3.4
 MarkupSafe==2.0.1
-matplotlib==3.4.1
-mccabe==0.6.1
-mecab-python3==1.0.4
-mistune==0.8.4
-mlflow==1.20.2
-murmurhash==1.0.5
-mysql-connector-python==8.0.23
+matplotlib==3.5.0
+mlflow==1.21.0
+multidict==5.2.0
 nanotime==0.5.2
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-networkx==2.6.2
-nltk==3.6.2
-notebook==6.3.0
-numpy==1.19.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.3
-pandocfilters==1.4.3
-paramiko==2.7.2
-parso==0.8.2
-pathspec==0.8.1
-pathy==0.6.0
-pexpect==4.8.0
-phonenumbers==8.12.28
-pickleshare==0.7.5
-Pillow==8.1.2
-pke @ git+https://github.com/boudinfl/pke.git@485c93879988f5b0290d241ad484c4fae7454530
-plac==1.3.3
+networkx==2.6.3
+numpy==1.21.4
+packaging==21.2
+pandas==1.3.4
+pathspec==0.9.0
+phonenumbers==8.12.37
+Pillow==8.4.0
 ply==3.11
-preshed==3.0.5
-prometheus-client==0.9.0
-prometheus-flask-exporter==0.18.2
-prompt-toolkit==3.0.18
-protobuf==3.15.8
+prometheus-client==0.12.0
+prometheus-flask-exporter==0.18.5
+protobuf==3.19.1
 psutil==5.8.0
-ptyprocess==0.7.0
-pyaml==20.4.0
 pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybind11==2.7.1
-pycodestyle==2.7.0
-pycparser==2.20
-pydantic==1.8.2
+pycparser==2.21
 pydot==1.4.2
-pygit2==1.6.1
-Pygments==2.8.1
+pygit2==1.7.0
+Pygments==2.10.0
 pygtrie==2.4.2
-pylcs==0.0.6
-pylint==2.9.6
-PyNaCl==1.4.0
 pyparsing==2.4.7
-pyrsistent==0.17.3
-python-benedict==0.24.0
-python-dateutil==2.8.1
-# Editable install with no version control (python-dlshogi==0.0.1)
--e /Users/konishi/workspace/shogiDL
-python-dotenv==0.17.0
+python-benedict==0.24.3
+python-dateutil==2.8.2
 python-editor==1.0.4
 python-fsutil==0.5.0
-python-shogi==1.0.13
 python-slugify==5.0.2
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.0.3
+pytz==2021.3
+PyYAML==6.0
 querystring-parser==1.2.4
-regex==2021.4.4
-requests==2.25.1
-requests-oauthlib==1.3.0
-rfc3986==1.4.0
-rich==10.6.0
-rsa==4.7.2
-ruamel.yaml==0.17.16
-ruamel.yaml.clib==0.2.6
+requests==2.26.0
+rich==10.14.0
+ruamel.yaml==0.17.17
 s3transfer==0.5.0
-scikit-learn==0.24.2
-scipy==1.6.3
-segtok==1.5.10
-selenium==3.141.0
-Send2Trash==1.5.0
-shortuuid==1.0.1
-shtab==1.3.9
-six==1.15.0
-sklearn==0.0
-smart-open==5.2.1
-smmap==4.0.0
-sniffio==1.2.0
-sortedcontainers==2.1.0
-spacy==3.1.3
-spacy-legacy==3.0.8
-SQLAlchemy==1.4.23
+scikit-learn==1.0.1
+scipy==1.7.2
+setuptools-scm==6.3.2
+shortuuid==1.0.8
+shtab==1.5.0
+six==1.16.0
+smmap==5.0.0
+SQLAlchemy==1.4.27
 sqlparse==0.4.2
-srsly==2.4.1
-sshfs==2021.8.1
-sshtunnel==0.4.0
-SudachiDict-core==20210802
-SudachiPy==0.5.4
 tabulate==0.8.9
-tensorboard==2.5.0
-tensorboard-data-server==0.6.0
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0rc2
-tensorflow-estimator==2.5.0rc0
-termcolor==1.1.0
-terminado==0.9.4
-testpath==0.4.4
 text-unidecode==1.3
-texttable==1.6.3
-thinc==8.0.10
-threadpoolctl==2.1.0
+threadpoolctl==3.0.0
 toml==0.10.2
-tornado==6.1
-tqdm==4.60.0
-traitlets==5.0.5
-typer==0.4.0
-typing-extensions==3.7.4.3
-Unidecode==1.3.2
-urllib3==1.26.4
-voluptuous==0.12.1
-wasabi==0.8.2
+tomli==1.2.2
+tqdm==4.62.3
+typing_extensions==4.0.0
+urllib3==1.26.7
+voluptuous==0.12.2
 wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.58.0
-Werkzeug==2.0.1
-wrapt==1.12.1
+websocket-client==1.2.1
+Werkzeug==2.0.2
 xmltodict==0.12.0
-yake==0.4.8
+yarl==1.7.2
 zc.lockfile==2.0
-zipp==3.5.0
+zipp==3.6.0
