--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ atpublic==2.3
 attrs==21.2.0
 boto3==1.20.7
 botocore==1.23.7
+catboost==1.0.3
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
@@ -38,6 +39,7 @@ future==0.18.2
 gitdb==4.0.9
 GitPython==3.1.24
 grandalf==0.6
+graphviz==0.18.2
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
@@ -61,6 +63,7 @@ pandas==1.3.4
 pathspec==0.9.0
 phonenumbers==8.12.37
 Pillow==8.4.0
+plotly==5.4.0
 ply==3.11
 prometheus-client==0.12.0
 prometheus-flask-exporter==0.18.5
@@ -95,6 +98,7 @@ smmap==5.0.0
 SQLAlchemy==1.4.27
 sqlparse==0.4.2
 tabulate==0.8.9
+tenacity==8.0.1
 text-unidecode==1.3
 threadpoolctl==3.0.0
 toml==0.10.2
